Update openapi.yaml
