# api/openapi.yaml
@@ -13,6 +13,7 @@ info:
     name: None
     url: 'https://example.com/terms'
   termsOfService: 'https://example.com/terms'
+  summary: summary
 servers:
   - url: 'http://localhost:8080'
 paths:
@@ -134,6 +135,42 @@ paths:
       x-stoplight:
         id: rwufl0c8ez3bb
       description: Execute crawl
+  '/users/{userId}/tasks':
+    parameters:
+      - schema:
+          type: string
+        name: userId
+        in: path
+        required: true
+        description: User ID
+    get:
+      summary: Get tasks of user
+      tags:
+        - task
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TaskResponse'
+                  x-stoplight:
+                    id: u9fhrfcwl0nd0
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      operationId: get-tasks-of-user
+      x-stoplight:
+        id: 9ekedgjoonen8
+      description: |-
+        Get public tasks of {userId}.
+        If {userId} is me it will return tasks of logged in user.
+        If {userId} is the same as logged in user, also return private tasks.
 components:
   schemas:
     TaskCore:
