# internal/ogen/oas_validators_gen.go
@@ -35,6 +35,31 @@ func (s GetTasksOKApplicationJSON) Validate() error {
 	return nil
 }
 
+func (s GetTasksOfUserOKApplicationJSON) Validate() error {
+	alias := ([]TaskResponse)(s)
+	if alias == nil {
+		return errors.New("nil is invalid value")
+	}
+	var failures []validate.FieldError
+	for i, elem := range alias {
+		if err := func() error {
+			if err := elem.Validate(); err != nil {
+				return err
+			}
+			return nil
+		}(); err != nil {
+			failures = append(failures, validate.FieldError{
+				Name:  fmt.Sprintf("[%d]", i),
+				Error: err,
+			})
+		}
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *TaskRequest) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
